test/data/resolver/valid/create_edge_pattern.cypher
CREATE (a:Person)-[r:KNOWS]->(b:Person) RETURN r
