test/data/resolver/invalid/set_labels_on_edge.cypher
MATCH (a:Person)-[e:KNOWS]->(b:Person) SET e:Foo RETURN e
